--- a/html-components/index.html
+++ b/html-components/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <!-- Font awesome CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/home_bootstrap.css">
+        <link rel="stylesheet" href="../css/home.css">
     </head>
     <body id="home">
         <div>
