Update footer social icons

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -7,7 +7,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <!-- Font awesome CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         <link rel="stylesheet" href="../css/common.css">
         <link rel="stylesheet" href="../css/home.css">
     </head>
@@ -81,23 +81,21 @@
                 <div class="awards">
                     <h1>Awards We've Won</h1>
                     <div class="awardImages">
-                        <img class="map" src="../images/awards/colorado-parenting-family-fav2021.png" alt="award1">
-                        <img class="map" src="../images/awards/bay-area-parent-gold2020.png" alt="award2">
-                        <img class="map" src="../images/awards/mla-swim-lessons-winner-2020-250x250.png" alt="award3">
-                        <img class="map" src="../images/awards/colorado-parenting-family-fav2020.png" alt="award4">
-                        <img class="map" src="../images/awards/website-parenting-oc-2019.jpeg" alt="award5">
-                        <img class="map" src="../images/awards/colorado-parenting-family-fav2019.jpeg" alt="award6">
-                        <img class="map" src="../images/awards/bay-area-parent-2019.jpeg" alt="award7">
-                        <img class="map" src="../images/awards/best-of-la-kids-winner.jpeg" alt="award8">
-                        <img class="map" src="../images/awards/gold-daisy-award-finalist-2018.jpeg" alt="award9">
-                        <img class="map" src="../images/awards/best-of-the-best-2018.jpeg" alt="award10">
+                        <img src="../images/awards/colorado-parenting-family-fav2021.png" alt="award1">
+                        <img src="../images/awards/bay-area-parent-gold2020.png" alt="award2">
+                        <img src="../images/awards/mla-swim-lessons-winner-2020-250x250.png" alt="award3">
+                        <img src="../images/awards/colorado-parenting-family-fav2020.png" alt="award4">
+                        <img src="../images/awards/website-parenting-oc-2019.jpeg" alt="award5">
+                        <img src="../images/awards/colorado-parenting-family-fav2019.jpeg" alt="award6">
+                        <img src="../images/awards/bay-area-parent-2019.jpeg" alt="award7">
+                        <img src="../images/awards/best-of-la-kids-winner.jpeg" alt="award8">
+                        <img src="../images/awards/gold-daisy-award-finalist-2018.jpeg" alt="award9">
+                        <img src="../images/awards/best-of-the-best-2018.jpeg" alt="award10">
                     </div>
                 </div>
             </main>
-            <footer>
-                <div class="footerLogo">
-                    <img class="map" src="../images/wave-small.png" alt="Splashes">
-                </div>
+            <footer class="container-fluid mt-5 py-5">
+                <img class="footerLogo pb-5" src="../images/wave-small.png" alt="Splashes">
                 <div id="footerTop">
                     <div class="footerLinks">
                         <ul>
@@ -110,12 +108,12 @@
                         </ul>
                     </div>
                     <div class="footerSocial">
-                        <a href="#" class="fa fa-linkedin"></a>
-                        <a href="#" class="fa fa-instagram"></a>
-                        <a href="#" class="fa fa-twitter"></a>
-                        <a href="#" class="fa fa-yelp"></a>
-                        <a href="#" class="fa fa-facebook"></a>
-                        <a href="#" class="fa fa-youtube"></a>
+                        <a href="#" class="fa-brands fa-linkedin-in rounded-circle"></a>
+                        <a href="#" class="fa-brands fa-instagram rounded-circle"></a>
+                        <a href="#" class="fa-brands fa-twitter rounded-circle"></a>
+                        <a href="#" class="fa-brands fa-yelp rounded-circle"></a>
+                        <a href="#" class="fa-brands fa-facebook-f rounded-circle"></a>
+                        <a href="#" class="fa-brands fa-youtube rounded-circle"></a>
                     </div>
                 </div>
                 <hr>
@@ -144,10 +142,10 @@
                 <hr>
                 <div id="footerBottom">
                     <div class="sponsors">
-                        <img class="map" src="../images/sponsors/footer-usssa-logo-2.png" alt="sponsor1">
-                        <img class="map" src="../images/sponsors/footer-ndpa-logo.png" alt="sponsor2">
-                        <img class="map" src="../images/sponsors/footer-member-issa-logo.png" alt="sponsor3">
-                        <img class="map" src="../images/sponsors/footer-stop-drowning-now-logo.png" alt="sponsor4">
+                        <img src="../images/sponsors/footer-usssa-logo-2.png" alt="sponsor1">
+                        <img src="../images/sponsors/footer-ndpa-logo.png" alt="sponsor2">
+                        <img src="../images/sponsors/footer-member-issa-logo.png" alt="sponsor3">
+                        <img src="../images/sponsors/footer-stop-drowning-now-logo.png" alt="sponsor4">
                     </div>
                     <div id="copyright">
                         <p>&copy; 2022 Splashes.</p>
