added header in about.html and added logic to open signIn modal on click of register button

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="../css/common.css">
         <link rel="stylesheet" href="../css/home.css">
+        <link rel="stylesheet" href="../css/signIn.css">
     </head>
     <body id="home">
         <div>
@@ -56,10 +57,11 @@
                                     <a href="contactUs.html">Contact Us</a>
                                 </li>
                                 <li class="nav-item px-4 px-xl-2 mt-1 mt-xl-2 registerButton">
-                                    <button class="p-2 px-4 rounded-pill bg-white">Register / Sign in</button>
+                                    <button id="openSignInModalBtn" class="p-2 px-4 rounded-pill bg-white">Register / Sign in</button>
                                 </li>
                             </ul>
                         </div>
+                        <div id="modalContainer"></div>
                     </nav>
                 </div>
             </header>
@@ -160,5 +162,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="../JS-components/index.js"></script>
     </body>
 </html>
