--- a/html-components/about.html
+++ b/html-components/about.html
@@ -3,13 +3,70 @@
     <head>
         <title >Splash</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../css/about.css">
+         <!-- Bootstrap CSS -->
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+         <!-- Font awesome CSS -->
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+         <link rel="stylesheet" href="../css/common.css">
+         <link rel="stylesheet" href="../css/home.css">
+         <link rel="stylesheet" href="../css/about.css">
+         <link rel="stylesheet" href="../css/signIn.css">
     </head>
     <body id="about">
         <!-- Container to wrap everything -->
         <div id="container">
          <!-- ------header codes needs to be added-------------- -->
+         <header>
+            <div>
+                <nav class="fixed-top navbar navbar-expand-xl navbar-dark">
+                    <div class="logo mx-3">
+                        <a href="#">
+                            <img src="../Graphics/logo-small.png" alt="Splashes">
+                        </a>
+                    </div>
+
+                    <!-- Hamburger Menu -->
+                    <button class = "navbar-toggler border-0" type = "button" data-toggle = "collapse" 
+                        data-target = "#navbarContent" 
+                        aria-controls = "navbarContent" aria-expanded = "false" 
+                        aria-label = "Toggle navigation">
+                        
+                        <div class="nav-icon">
+                            <span class="bar bar-1"></span>
+                            <span class="bar bar-2"></span>
+                            <span class="bar bar-3"></span>
+                        </div>
+                    </button>
+
+                    <div class="collapse navbar-collapse hamburgerMenu" id="navbarContent">
+                        <ul class="navbar-nav w-100 mt-4 mt-xl-n4 mx-xl-3 d-flex justify-content-start justify-content-xl-end">
+                            <li class="nav-item p-3 px-xl-2">
+                                <a href="about.html">About</a>
+                            </li>
+                            <li class="nav-item p-3 px-xl-2">
+                                <a href="swimming-lessons.html">Swimming Lessons</a>
+                            </li>
+                            <li class="nav-item p-3 px-xl-2">
+                                <a href="swim-programs.html">Swim Programs</a>
+                            </li>
+                            <li class="nav-item p-3 px-xl-2">
+                                <a href="adult-programs.html">Adult Programs</a>
+                            </li>
+                            <li class="nav-item p-3 px-xl-2">
+                                <a href="locations.html">Locations</a>
+                            </li>
+                            <li class="nav-item p-3 px-xl-2">
+                                <a href="contactUs.html">Contact Us</a>
+                            </li>
+                            <li class="nav-item px-4 px-xl-2 mt-1 mt-xl-2 registerButton">
+                                <button id="openSignInModalBtn" class="p-2 px-4 rounded-pill bg-white">Register / Sign in</button>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="modalContainer"></div>
+                </nav>
+            </div>
+        </header>
        <main>
         <div class="philospyClass">
             <div class="content">
@@ -36,6 +93,9 @@
     <!-- footer code needs to be added -->
     </div>
       <!-- javascript codes -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
       <script src="../JS-components/about.js"></script>
     </body>
 </html>
