Change header to sticky

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -15,7 +15,7 @@
         <div>
             <header>
                 <div>
-                    <nav class="fixed-top navbar navbar-expand-xl navbar-dark">
+                    <nav class="sticky-top navbar navbar-expand-xl navbar-dark">
                         <div class="logo mx-3">
                             <a href="#">
                                 <img src="../Graphics/logo-small.png" alt="Splashes">
