--- a/html-components/about.html
+++ b/html-components/about.html
@@ -90,7 +90,67 @@
             </ul>
         </div>
     </section>
-    <!-- footer code needs to be added -->
+    <footer>
+        <div class="footerLogo">
+            <img class="map" src="../images/wave-small.png" alt="Splashes">
+        </div>
+        <div id="footerTop">
+            <div class="footerLinks">
+                <ul>
+                    <li><a>About</a></li>
+                    <li><a>Locations</a></li>
+                    <li><a>FAQs</a></li>
+                    <li><a>Contact</a></li>
+                    <li><a>Register / Sign in</a></li>
+                    <li><a>Careers</a></li>
+                </ul>
+            </div>
+            <div class="footerSocial">
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-yelp"></a>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-youtube"></a>
+            </div>
+        </div>
+        <hr>
+        <div class="footerLocations">
+            <div>
+                <p class="footerLocation">Orange County</p>
+                <p class="footerPhone">(949) 450-0777</p>
+            </div>
+            <div>
+                <p class="footerLocation">San Diego County</p>
+                <p class="footerPhone">(760) 603-9400</p>
+            </div>
+            <div>
+                <p class="footerLocation">Los Angeles County</p>
+                <p class="footerPhone">(626) 836-1200</p>
+            </div>
+            <div>
+                <p class="footerLocation">Northern California</p>
+                <p class="footerPhone">(408) 279-1700</p>
+            </div>
+            <div>
+                <p class="footerLocation">Denver</p>
+                <p class="footerPhone">(720) 344-7700</p>
+            </div>
+        </div>
+        <hr>
+        <div id="footerBottom">
+            <div class="sponsors">
+                <img class="map" src="../images/sponsors/footer-usssa-logo-2.png" alt="sponsor1">
+                <img class="map" src="../images/sponsors/footer-ndpa-logo.png" alt="sponsor2">
+                <img class="map" src="../images/sponsors/footer-member-issa-logo.png" alt="sponsor3">
+                <img class="map" src="../images/sponsors/footer-stop-drowning-now-logo.png" alt="sponsor4">
+            </div>
+            <div id="copyright">
+                <p>&copy; 2022 Splashes.</p>
+                <p>All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
     </div>
       <!-- javascript codes -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
