Fix modal bug and sticky top

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -14,9 +14,9 @@
     </head>
     <body id="home">
         <div>
-            <header>
+            <header class="sticky-top">
                 <div>
-                    <nav class="sticky-top navbar navbar-expand-xl navbar-dark">
+                    <nav class="navbar navbar-expand-xl navbar-dark">
                         <div class="logo mx-3">
                             <a href="#">
                                 <img src="../Graphics/logo-small.png" alt="Splashes">
@@ -61,7 +61,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div id="modalContainer"></div>
+                        <div id="modalContainer" class="collapse"></div>
                     </nav>
                 </div>
             </header>
