taken pull from dev and modifification

--- a/html-components/about.html
+++ b/html-components/about.html
@@ -16,9 +16,9 @@
         <!-- Container to wrap everything -->
         <div id="container">
          <!-- ------header codes needs to be added-------------- -->
-         <header>
+         <header class="sticky-top">
             <div>
-                <nav class="fixed-top navbar navbar-expand-xl navbar-dark">
+                <nav class="navbar navbar-expand-xl navbar-dark">
                     <div class="logo mx-3">
                         <a href="#">
                             <img src="../Graphics/logo-small.png" alt="Splashes">
@@ -63,7 +63,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div id="modalContainer"></div>
+                    <div id="modalContainer" class="collapse"></div>
                 </nav>
             </div>
         </header>
@@ -157,5 +157,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
       <script src="../JS-components/about.js"></script>
+      <script src="../JS-components/common.js"></script>
     </body>
 </html>
