Fix navbar on different screen resolutions

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -14,7 +14,7 @@
     </head>
     <body id="home">
         <div>
-            <header class="sticky-top">
+            <header>
                 <div>
                     <nav class="navbar navbar-expand-xl navbar-dark">
                         <div class="logo mx-3">
