Fix awards in index to be responsive and fix logo spacing

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -17,7 +17,7 @@
             <header>
                 <div>
                     <nav class="navbar navbar-expand-xl navbar-dark">
-                        <div class="logo mx-3">
+                        <div class="logo">
                             <a href="#">
                                 <img src="../Graphics/logo-small.png" alt="Splashes">
                             </a>
@@ -81,18 +81,26 @@
                     <img class="map" src="../images/home-our-locations-map.png" alt="Map">
                 </div>
                 <div class="awards">
-                    <h1>Awards We've Won</h1>
-                    <div class="awardImages">
-                        <img src="../images/awards/colorado-parenting-family-fav2021.png" alt="award1">
-                        <img src="../images/awards/bay-area-parent-gold2020.png" alt="award2">
-                        <img src="../images/awards/mla-swim-lessons-winner-2020-250x250.png" alt="award3">
-                        <img src="../images/awards/colorado-parenting-family-fav2020.png" alt="award4">
-                        <img src="../images/awards/website-parenting-oc-2019.jpeg" alt="award5">
-                        <img src="../images/awards/colorado-parenting-family-fav2019.jpeg" alt="award6">
-                        <img src="../images/awards/bay-area-parent-2019.jpeg" alt="award7">
-                        <img src="../images/awards/best-of-la-kids-winner.jpeg" alt="award8">
-                        <img src="../images/awards/gold-daisy-award-finalist-2018.jpeg" alt="award9">
-                        <img src="../images/awards/best-of-the-best-2018.jpeg" alt="award10">
+                    <h1 class="pb-4">Awards We've Won</h1>
+                    <div class="awardImages grid-system my-5 my-sm-0">
+                        <div class="row d-flex justify-content-center mx-5 mx-sm-0">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-4" src="../images/awards/colorado-parenting-family-fav2021.png" alt="award1">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-2" src="../images/awards/bay-area-parent-gold2020.png" alt="award2">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-1" src="../images/awards/mla-swim-lessons-winner-2020-250x250.png" alt="award3">
+                        </div>
+                        <div class="row d-flex justify-content-center mx-5 mx-sm-0">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-0" src="../images/awards/colorado-parenting-family-fav2020.png" alt="award4">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-4" src="../images/awards/website-parenting-oc-2019.jpeg" alt="award5">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-0" src="../images/awards/colorado-parenting-family-fav2019.jpeg" alt="award6">
+                        </div>
+                        <div class="row d-flex justify-content-center mx-5 mx-sm-0">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-0" src="../images/awards/bay-area-parent-2019.jpeg" alt="award7">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-2" src="../images/awards/best-of-la-kids-winner.jpeg" alt="award8">
+                            <img class="col-sm-3 col-xl-2 mx-5 px-5 mx-sm-0 px-sm-3" src="../images/awards/gold-daisy-award-finalist-2018.jpeg" alt="award9">
+                        </div>
+                        <div class="row d-flex justify-content-start mx-5 mx-sm-0">
+                            <img class="col-sm-3 col-xl-2 offset-sm-1 offset-xl-3" src="../images/awards/best-of-the-best-2018.jpeg" alt="award10">
+                        </div>
                     </div>
                 </div>
             </main>
