Add home oage section - hands on learning

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -73,8 +73,32 @@
                     <img src="../images/register-online-here-banner.png" alt="Register">
                     <img src="../images/ww-site-hiring-banner-resized.png" alt="Hiring">
                 </div>
-                <div class="handsOnTeaching">
-                    <img src="../images/home-hands-on-teaching.jpeg" alt="HandsOnTeaching">
+                <div class="handsOnTeaching mt-2">
+                    <div class="handsOnTeachingText">
+                        <h2>Hands On Teaching</h2>
+                        <p>
+                            Splashes Aquatics Swim School provides high quality swim instruction and the ideal 
+                            environment for learning how to swim. Our swim instructors use specialized “muscle 
+                            memory” teaching techniques that help our students progress at a quick rate. 
+                            Grouped by age and ability, our students benefit from swim classes that offer 
+                            personalized attention. It's never too late to learn to swim!
+                        </p>
+                        <p class="offersTitle">Splashes Aquatics Offers:</p>
+                        <ul class="offersOptions">
+                            <li><span>Private Swimming Lessons</span> - All Locations</li>
+                            <li><span>Semi-Private Swimming Lessons</span> - All Locations</li>
+                            <li><span>Parent & Me (Baby) Swimming Lessons</span> - Select Locations</li>
+                        </ul>
+                        <p>
+                            Select locations also offer additional swim programs such as swim competitions, 
+                            swim teams, water aerobics, aquatic therapy, swim camps and more! To learn more 
+                            about the Splashes Family Swim School near you, select a location below.
+                        </p>
+                        <p class="signUpReadyText">Ready to sign up?</p>
+                        <div class="registerButtonContainer">
+                            <button type="button" class="btn rounded-pill p-3 px-4 mb-4 text-white">Register Now</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="locations">
                     <img class="bg" src="../images/home-our-locations-bg.jpeg" alt="Locations">
