Update home page locations section

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -101,8 +101,18 @@
                     </div>
                 </div>
                 <div class="locations">
-                    <img class="bg" src="../images/home-our-locations-bg.jpeg" alt="Locations">
                     <img class="map" src="../images/home-our-locations-map.png" alt="Map">
+                    <div class="locationsText">
+                        <h1>Find a Splashes Swim School near you</h1>
+                        <h3>Family Swim School Locations</h3>
+                        <p>
+                            Splashes Aquatics offers the finest professional swimming lessons from 21 swim schools and aquatic centers in 
+                            California and Denver.
+                        </p>
+                        <div class="registerButtonContainer">
+                            <button type="button" class="btn rounded-pill p-2 px-4 mb-4 text-white">Find a Location Near You</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="awards">
                     <h1 class="pb-4">Awards We've Won</h1>
