top about image added and resposiveness of content

--- a/html-components/about.html
+++ b/html-components/about.html
@@ -67,6 +67,9 @@
                 </nav>
             </div>
         </header>
+        <div class="aboutSplash">
+            <h1>About Splashes</h1>
+        </div>
        <main>
         <div class="philospyClass">
             <div class="content">
