--- a/html-components/index.html
+++ b/html-components/index.html
@@ -139,7 +139,7 @@
                 </div>
             </main>
             <footer class="container-fluid mt-5 py-5">
-                <div class="container-xl">
+                <div class="container-xl py-5">
                     <img class="pb-5" src="../images/wave-small.png" alt="Splashes">
                     <div class="row font-weight-bold">
                         <div class="col-xl-6 text-xl-left">
@@ -194,7 +194,7 @@
                         </div>
                         <div id="copyright">
                             <p>&copy; 2022 Splashes.</p>
-                            <p>All Rights Reserved</p>
+                            <p class="mt-n2">All Rights Reserved</p>
                         </div>
                     </div>
                 </div>
