Fix footer logo and home page heading text and buttons

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -66,8 +66,13 @@
                 </div>
             </header>
             <main>
-                <div class="titleImageSection">
-                    <img src="../images/home.jpeg" alt="Home">
+                <div class="titleImageSection d-flex justify-content-center flex-column text-white">
+                    <h1>Learning it the Right Way,</h1>
+                    <h1 class="mt-n3">Right from the Beginning</h1>
+                    <div class="titleButtons row d-flex justify-content-center">
+                        <button class="btn col-sm-5 bg-white rounded-pill">Informational Video</button>
+                        <button class="btn col-sm-5 bg-white rounded-pill">Swimvenger Video</button>
+                    </div>
                 </div>
                 <div class="registerHiring">
                     <img src="../images/register-online-here-banner.png" alt="Register">
@@ -140,7 +145,7 @@
             </main>
             <footer class="container-fluid mt-5 py-5">
                 <div class="container-xl py-5">
-                    <img class="pb-5" src="../images/wave-small.png" alt="Splashes">
+                    <img class="footerLogo pb-5" src="../images/wave-small.png" alt="Splashes">
                     <div class="row font-weight-bold">
                         <div class="col-xl-6 text-xl-left">
                             <ul>
