--- a/html-components/index.html
+++ b/html-components/index.html
@@ -24,7 +24,7 @@
                         </div>
 
                         <!-- Hamburger Menu -->
-                        <button class = "navbar-toggler border-0" type = "button" data-toggle = "collapse" 
+                        <button id="nav-collapsed-button" class = "navbar-toggler border-0" type = "button" data-toggle = "collapse" 
                             data-target = "#navbarContent" 
                             aria-controls = "navbarContent" aria-expanded = "false" 
                             aria-label = "Toggle navigation">
