Update logo link

--- a/html-components/index.html
+++ b/html-components/index.html
@@ -18,7 +18,7 @@
                 <div>
                     <nav class="navbar navbar-expand-xl navbar-dark">
                         <div class="logo">
-                            <a href="#">
+                            <a href="index.html">
                                 <img src="../Graphics/logo-small.png" alt="Splashes">
                             </a>
                         </div>
