--- a/html-components/index.html
+++ b/html-components/index.html
@@ -9,6 +9,7 @@
         <!-- Font awesome CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/fonts.css">
         <link rel="stylesheet" href="../css/home.css">
         <link rel="stylesheet" href="../css/signIn.css">
     </head>
