Rename folders and move graphics folder to images

--- a/html-components/swim-programs.html
+++ b/html-components/swim-programs.html
@@ -23,7 +23,7 @@
                     <nav class="navbar navbar-expand-xl navbar-dark">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="../Graphics/logo-small.png" alt="Splashes">
+                                <img src="../images/logo-small.png" alt="Splashes">
                             </a>
                         </div>
 
