--- a/html-components/signIn.html
+++ b/html-components/signIn.html
@@ -15,11 +15,11 @@
             <div id="signInModal" class="modal">
             <!-- Modal content -->
             <div class="madalBox">
-                <img src="../Graphics/splash-wave.png" alt="Splash Wave" class="splashWave">
+                <img src="../images/splash-wave.png" alt="Splash Wave" class="splashWave">
                 <div class="modal-content">
                     <span class="close">&times;</span>
                     <h2>SIGN IN</h2>
-                    <img src="../Graphics/shark-full.png" class="corner-image">
+                    <img src="../images/shark-full.png" class="corner-image">
                     <form>
                         <div class="form-group">
                             <label for="username">Email:<sup>*</sup></label>
