--- a/html-components/signIn.html
+++ b/html-components/signIn.html
@@ -43,6 +43,6 @@
         </div>
       <!-- javascript injection -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script src="../JS-components/signIn.js"></script>
+      <script src="../js/signIn.js"></script>
     </body>
 </html>
