--- a/html-components/adult-programs.html
+++ b/html-components/adult-programs.html
@@ -219,7 +219,7 @@
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../JS-components/common.js"></script>
+    <script src="../js/common.js"></script>
     
 
 </body>
