convert some css to bootstrap for responsiveness

--- a/html-components/swim-programs.html
+++ b/html-components/swim-programs.html
@@ -129,11 +129,13 @@
                     </nav>
                 </div>
             </header>
-            <div class="layout">
-                <h1>Summer Swim Camps</h1>
+            <div class="bgImage">
+                <div class="layout">
+                    <h1>Summer Swim Camps</h1>
+                </div>
             </div>
-            <main>
-                <div class="swimmingprogram">
+            <main class="mx-5">
+                <div class="swimmingprogram mx-sm-2 mx-xl-5 px-sm-2 px-xl-5">
                     <div class="content">
                         <h1>Building Swimming Skills All Summer Long</h1>
                         <p>
