--- a/html-components/swimming-lessons.html
+++ b/html-components/swimming-lessons.html
@@ -129,11 +129,13 @@
                     </nav>
                 </div>
             </header>
-            <div class="layout">
-                <h1>Which Lesson is Best?</h1>
+            <div class="bgImage">
+                <div class="layout">
+                    <h1>Which Lesson is Best?</h1>
+                </div>
             </div>
-            <main>
-                <div class="swimminglesson">
+            <main class="mx-5">
+                <div class="mx-sm-2 mx-xl-5 px-sm-2 px-xl-5">
                     <div class="content">
                         <h1>Our Lesson Types</h1>
                         <p class="lessontype">
